added navbar to index. index jumbotron not yet working

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,30 +14,30 @@
     <title>Tyler Smith :: Portfolio</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar py-3 pl-4 justify-content-between">
-            <div class="fa-layers">
-                <a id="navbar__logo" href="./portfolio.html">
-                    <i class="far fa-circle" data-fa-transform="grow-6"></i>
-                    <div class="fa-layers-text" data-fa-transform="shrink-4">
-                        TS</div>
-                </a>
-            </div>
 
-            <!-- Navbar Links -->
-            <ul class="nav mr-4">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">about</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">portfolio<a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Navbar! -->
+    <nav class="navbar py-3 pl-4 justify-content-between">
+        <div class="fa-layers">
+            <a id="navbar__logo" href="./portfolio.html">
+                <i class="far fa-circle" data-fa-transform="grow-6"></i>
+                <div class="fa-layers-text" data-fa-transform="shrink-4">
+                    TS</div>
+            </a>
+        </div>
+
+        <!-- Navbar Links -->
+        <ul class="nav mr-4">
+            <li class="nav-item">
+                <a class="nav-link" href="./index.html">about</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./portfolio.html">portfolio<a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contact.html">contact</a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="jumbotron ">
