--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Styles -->
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    
+    <title>Tyler Smith :: About</title>
 </head>
 <body>
-    
+    <!-- Navbar! -->
+    <nav class="navbar py-3 pl-4 justify-content-between">
+        <div class="fa-layers">
+            <a id="navbar__logo" href="./portfolio.html">
+                <i class="far fa-circle" data-fa-transform="grow-16"></i>
+                <div class="fa-layers-text">TS</div>
+            </a>
+        </div>
+
+        <!-- Navbar Links -->
+        <ul class="nav mr-4">
+            <li class="nav-item">
+                <a class="nav-link" href="./index.html">about</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./portfolio.html">portfolio<a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./contact.html">contact</a>
+            </li>
+        </ul>   
+    </nav>
+
+    <main>
+        <!-- Main Area About Me -->
+        <section class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="jumbotron jumbotron-main align-items-middle w-100">
+                        Test!
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- More Detailed Info -->
+        <section class="container">
+
+        </section>
+    </main>
+
+    <script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
 </body>
 </html>
