Changed logo href to index instead of portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar! -->
     <nav class="navbar py-3 pl-4 justify-content-between">
         <div class="fa-layers">
-            <a id="navbar__logo" href="./portfolio.html">
+            <a id="navbar__logo" href="./index.html">
                 <i class="far fa-circle" data-fa-transform="grow-16"></i>
                 <div class="fa-layers-text">TS</div>
             </a>
@@ -43,8 +43,18 @@
             <div class="row">
                 <div class="col">
                     <div class="jumbotron jumbotron-main align-items-middle w-100">
-                        Test!
+                        Tyler Smith
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Left Main Column -->
+                <div class="col">
+                    
+                </div>
+                <!-- Right Main Column -->
+                <div class="col">
+
                 </div>
             </div>
         </section>
