--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- Navbar! -->
     <nav class="navbar py-3 pl-4 justify-content-between">
         <div class="fa-layers">
-            <a id="navbar__logo" href="./portfolio.html">
+            <a id="navbar__logo" href="./index.html">
                 <i class="far fa-circle" data-fa-transform="grow-6"></i>
                 <div class="fa-layers-text" data-fa-transform="shrink-4">
                     TS</div>
