added Bill Murray placeholder image. modified index layout for image/description

--- a/index.html
+++ b/index.html
@@ -34,27 +34,24 @@
             <li class="nav-item">
                 <a class="nav-link" href="./contact.html">contact</a>
             </li>
-        </ul>   
+        </ul>
     </nav>
 
     <main>
         <!-- Main Area About Me -->
-        <section class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="jumbotron jumbotron-main align-items-middle w-100">
-                        Tyler Smith
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <!-- Left Main Column -->
-                <div class="col">
-                    
-                </div>
-                <!-- Right Main Column -->
-                <div class="col">
+        <div class="container-fluid" id="navbar-gradient-hack"></div>
 
+        <section class="container-fluid">
+            <div class="row">
+                <!-- Left Column With Picture Of Me -->
+                <div class="col-4 justify-content-start ml-n4">
+                    <img src="https://www.fillmurray.com/400/800" alt="">
+                </div>
+                <!-- Right Column Contains 1-2 columns with info -->
+                <div class="col-6 mt-5">
+                    <header class="jumbotron">
+                        Tyler Smith
+                    </header>
                 </div>
             </div>
         </section>
