init readme; made picture absolute so it can sit on left side of screen behind everything

--- a/index.html
+++ b/index.html
@@ -38,26 +38,32 @@
     </nav>
 
     <main>
-        <!-- Main Area About Me -->
-        <div class="container-fluid" id="navbar-gradient-hack"></div>
+        <!-- img on left side of screen -->
+        <img src="https://www.fillmurray.com/1920/1080" alt="" width="700" height="100%" id="bio-picture-img">  
 
         <section class="container-fluid">
             <div class="row">
-                <!-- Left Column With Picture Of Me -->
-                <div class="col-4 justify-content-start ml-n4">
-                    <img src="https://www.fillmurray.com/400/800" alt="">
-                </div>
+                <!-- Empty Div For img Spacing -->
+                <div class="col-5 justify-content-start ml-n4"></div>
                 <!-- Right Column Contains 1-2 columns with info -->
                 <div class="col-6 mt-5">
-                    <header class="jumbotron">
-                        Tyler Smith
-                    </header>
+                    <div class="row justify-content-center">
+                        <header class="jumbotron">
+                            Tyler Smith
+                        </header>
+                    </div>
+                    <div class="row">
+                        <p id="bio-description">
+                            This is placeholder text what's up placeholder tyler smith I'm the best blah blah blah This is placeholder text what's up placeholder tyler smith I'm the best blah blah blah
+                            <button type="button" class="btn btn-dark">Click Here To View My Portfolio</button>
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- More Detailed Info -->
         <section class="container">
-
+            
         </section>
     </main>
 
