--- a/portfolio.html
+++ b/portfolio.html
@@ -14,35 +14,72 @@
     <title>Tyler Smith :: Portfolio</title>
 </head>
 <body>
+	<!-- Navbar! -->
+	<nav class="navbar py-3 pl-4 justify-content-between">
+		<div class="fa-layers">
+			<a id="navbar__logo" href="./index.html">
+				<i class="far fa-circle" data-fa-transform="grow-16"></i>
+				<div class="fa-layers-text">TS</div>
+			</a>
+		</div>
 
-    <!-- Navbar! -->
-    <nav class="navbar py-3 pl-4 justify-content-between">
-        <div class="fa-layers">
-            <a id="navbar__logo" href="./index.html">
-                <i class="far fa-circle" data-fa-transform="grow-6"></i>
-                <div class="fa-layers-text" data-fa-transform="shrink-4">
-                    TS</div>
-            </a>
-        </div>
-
-        <!-- Navbar Links -->
-        <ul class="nav mr-4">
-            <li class="nav-item">
-                <a class="nav-link" href="./index.html">about</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./portfolio.html">portfolio<a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./contact.html">contact</a>
-            </li>
-        </ul>
-    </nav>
+		<!-- Navbar Links -->
+		<ul class="nav mr-4">
+			<li class="nav-item">
+				<a class="nav-link" href="./index.html">about</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="./portfolio.html">portfolio<a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="./contact.html">contact</a>
+			</li>
+		</ul>
+	</nav>
+	<!-- Navbar Gradient -->
+	<div class="container-fluid" id="navbar-gradient-hack"></div>
 
     <main>
-        <div class="jumbotron ">
-            This is a JUMBO JUMBOTRON!
-        </div>
+		<div class="container">
+			<div class="row mt-4 justify-content-center">
+				<div class="display-1">
+					Archived Projects
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<div class="card border border-secondary">
+						<img class="card-img-top" src="./Assets/my-images/pbab.gif" width="100%" height="100%" alt="Physics Based Arena Brawler">
+						<div class="card-body">
+							<h5 class="card-title">
+								PBAB
+							</h5>
+							<p class="card-text">
+								Physics-Based Arena Brawler (PBAB) is a top-down gladiator simulator. Fight your way through waves of enemies while you try to survive.
+							</p>
+							<p class="text-muted mt-2">2018-2019</p>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card border border-secondary">
+						<img class="card-img-top" src="./Assets/my-images/bm.jpg" width="100%" height="100%" alt="Physics Based Arena Brawler">
+						<div class="card-body">
+							<h5 class="card-title">
+								Backflip Master
+							</h5>
+							<p class="card-text">
+								Backflip Master is a physics-based backflipping game. Avenge the death of a loved one by backflipping your way to justice.
+							</p>
+							<p class="text-muted mt-2">2019-2020</p>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					
+				</div>
+			</div>
+		</div>
     </main>
 
     <footer>
