--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<!-- Navbar! -->
-	<nav class="navbar navbar-expand-lg py-3 pl-4 justify-content-between">
+	<nav class="navbar navbar-expand-md py-3 pl-4 justify-content-between">
 		<div class="fa-layers">
 			<a id="navbar__logo" href="./index.html">
 				<i class="far fa-circle" data-fa-transform="grow-16"></i>
@@ -31,13 +31,13 @@
 		<!-- Navbar Links -->
 		<div class="collapse navbar-collapse justify-content-end" id="navbar-links">
 			<ul class="navbar-nav mr-4">
-				<li class="nav-item">
+				<li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./index.html">about</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./portfolio.html">portfolio<a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./contact.html">contact</a>
 				</li>
 			</ul>
