--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 	<link rel="stylesheet" href="./style.css">
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Recursive:wght@600&display=swap" rel="stylesheet">
 
 	<title>Tyler Smith :: About</title>
 </head>
 
 <body>
 	<!-- Navbar! -->
-	<nav class="navbar navbar-expand-md py-3 pl-4 justify-content-between">
+	<nav class="navbar navbar-expand-lg py-3 pl-4 justify-content-between">
 		<div class="fa-layers">
 			<a id="navbar__logo" href="./index.html">
 				<i class="far fa-circle" data-fa-transform="grow-16"></i>
 				<div class="fa-layers-text">TS</div>
 			</a>
 		</div>
+		<p>Tyler Smith</p>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links">
 			<i class="far fa-caret-square-down" data-fa-transform="grow-10"></i>
 		</button>
@@ -48,32 +50,52 @@
 	<!-- Main Content -->
 	<main>
 		<!-- img on left side of screen -->
-		<img src="https://www.fillmurray.com/1920/1080" class="img-fluid" alt="Tyler Smith" width="700" height="100%"
+		<!-- TODO replace this with actual picture and fix alt tags -->
+		<img src="https://www.fillmurray.com/1920/1080" class="img-fluid" alt="Tyler Smith" width="33%" height="100%"
 			id="bio-picture-img">
+		<img src="https://www.fillmurray.com/800/600" class="img-fluid" alt="Tyler Smith Smaller Image" width="100%" id="bio-picture-img--sm">
+
 		<section class="container-fluid">
 			<div class="row">
 				<!-- Empty Div For img Spacing -->
-				<div class="col-5 justify-content-start ml-n4"></div>
+				<div class="col-md-12 col-lg-4 justify-content-start ">
+					<div class="row">
+						<div class="col text-center">
+							<h1 id="header-fullname">
+								Tyler Smith
+							</h1>
+						</div>
+					</div>
+				</div>
 				<!-- Right Column Contains 1-2 columns with info -->
-				<div class="col-6 mt-5">
-					<div class="row justify-content-center">
-						<header class="jumbotron">
-							Tyler Smith
-						</header>
+				<div class="col-md-12 col-lg-8 mt-5">
+					<div class="row">
+						<div class="col">
+							<p class="bio-header">Full-stack Web Developer</p>
+							<p class="bio-desc">
+								HTML, CSS, JS, React, etc...
+							</p>
+						</div>
 					</div>
-					<div>
-						<p id="bio-description">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-							Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis
-							sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa.
-							Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per
-							conubia nostra, per inceptos himenaeos.
-							<button type="button" href="./portfolio.html" class="btn btn-dark float-right"
-								id="bio-description__button">
-								Click Here To View My Portfolio
-							</button>
-						</p>
+					<div class="row">
+						<div class="col">
+							<p class="bio-header">Game Designer</p>
+							<p class="bio-desc">
+								C#, Unity, Physics-engines
+							</p>
+						</div>
 					</div>
+					<!-- <div class="row text-center align-content-end h-50">
+						<div class="col-4">
+							<a href="./portfolio.html" class="btn--index">Portfolio</a>
+						</div>
+						<div class="col-4">
+							<div class="btn btn-outline-dark btn--index">Contact</div>
+						</div>
+						<div class="col-4">
+								<div class="btn btn-outline-dark btn--index">About</div>
+						</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
@@ -94,6 +116,7 @@
 		</div>
 	</footer>
 
+	<script src="./imgCollapser.js"></script>
 	<script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
