--- a/portfolio.html
+++ b/portfolio.html
@@ -82,9 +82,16 @@
 		</div>
     </main>
 
-    <footer>
-        this is footer! :D
-    </footer>
+	<!-- Footer -->
+	<footer>
+		<div class="container-fluid text-center">
+			<div class="row">
+				<div class="col">
+					<small>Copyright © 2020 Tyler Smith. All Rights Reserved.</small>
+				</div>
+			</div>
+		</div>
+	</footer>
 
     <script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
 </body>
