moved fullname header to navbar, looks much better.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="fa-layers-text">TS</div>
 			</a>
 		</div>
-		<p>Tyler Smith</p>
+		<a href="index.html" id="navbar__fullname">Tyler Smith</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links">
 			<i class="far fa-caret-square-down" data-fa-transform="grow-10"></i>
 		</button>
@@ -47,6 +47,7 @@
 	</nav>
 	<!-- Navbar Gradient -->
 	<div class="container-fluid" id="navbar-gradient-hack"></div>
+
 	<!-- Main Content -->
 	<main>
 		<!-- img on left side of screen -->
@@ -60,14 +61,11 @@
 				<!-- Empty Div For img Spacing -->
 				<div class="col-md-12 col-lg-4 justify-content-start ">
 					<div class="row">
-						<div class="col text-center">
-							<h1 id="header-fullname">
-								Tyler Smith
-							</h1>
-						</div>
+						<div class="col text-center"></div>
 					</div>
 				</div>
 				<!-- Right Column Contains 1-2 columns with info -->
+				<!-- NOTE Couldn't figure out how to vertically align these two divs each taking up 50% height -->
 				<div class="col-md-12 col-lg-8 mt-5">
 					<div class="row">
 						<div class="col">
