--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<!-- Navbar! -->
-	<nav class="navbar navbar-expand-lg py-3 pl-4 justify-content-between">
+	<nav class="navbar navbar-expand-lg py-3 justify-content-between">
 		<div class="fa-layers">
 			<a id="navbar__logo" href="./index.html">
 				<i class="far fa-circle" data-fa-transform="grow-16"></i>
@@ -37,7 +37,7 @@
 					<a class="nav-link" href="./index.html">about</a>
 				</li>
 				<li class="nav-item pt-2 pt-md-1">
-					<a class="nav-link" href="./portfolio.html">portfolio<a>
+					<a class="nav-link" href="./portfolio.html">portfolio</a>
 				</li>
 				<li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./contact.html">contact</a>
@@ -54,28 +54,31 @@
 		<!-- TODO replace this with actual picture and fix alt tags -->
 		<img src="https://www.fillmurray.com/1920/1080" class="img-fluid" alt="Tyler Smith" width="33%" height="100%"
 			id="bio-picture-img">
-		<img src="https://www.fillmurray.com/800/600" class="img-fluid" alt="Tyler Smith Smaller Image" width="100%" id="bio-picture-img--sm">
+		<img src="https://www.fillmurray.com/1200/800" class="d-flex" alt="Tyler Smith Smaller Image" width="100%" id="bio-picture-img--sm">
 
 		<section class="container-fluid">
 			<div class="row">
 				<!-- Empty Div For img Spacing -->
-				<div class="col-md-12 col-lg-4 justify-content-start ">
+				<div class="col-md-12 col-lg-4">
 					<div class="row">
 						<div class="col text-center"></div>
 					</div>
 				</div>
 				<!-- Right Column Contains 1-2 columns with info -->
 				<!-- NOTE Couldn't figure out how to vertically align these two divs each taking up 50% height -->
-				<div class="col-md-12 col-lg-8 mt-5">
-					<div class="row">
+				<div class="col-md-12 col-lg-8">
+					<div class="row bio-row debug">
 						<div class="col">
-							<p class="bio-header">Full-stack Web Developer</p>
+							<div class=bio-header>
+								<p>Full-stack</p>
+								<p>Web Developer</p>
+							</div>
 							<p class="bio-desc">
 								HTML, CSS, JS, React, etc...
 							</p>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row bio-row debug">
 						<div class="col">
 							<p class="bio-header">Game Designer</p>
 							<p class="bio-desc">
@@ -83,17 +86,6 @@
 							</p>
 						</div>
 					</div>
-					<!-- <div class="row text-center align-content-end h-50">
-						<div class="col-4">
-							<a href="./portfolio.html" class="btn--index">Portfolio</a>
-						</div>
-						<div class="col-4">
-							<div class="btn btn-outline-dark btn--index">Contact</div>
-						</div>
-						<div class="col-4">
-								<div class="btn btn-outline-dark btn--index">About</div>
-						</div>
-					</div> -->
 				</div>
 			</div>
 		</section>
