--- a/portfolio.html
+++ b/portfolio.html
@@ -15,37 +15,44 @@
 </head>
 <body>
 	<!-- Navbar! -->
-	<nav class="navbar py-3 pl-4 justify-content-between">
+	<nav class="navbar navbar-expand-lg py-3 justify-content-between">
 		<div class="fa-layers">
 			<a id="navbar__logo" href="./index.html">
 				<i class="far fa-circle" data-fa-transform="grow-16"></i>
 				<div class="fa-layers-text">TS</div>
 			</a>
 		</div>
-
+		<a href="index.html" id="navbar__fullname">Tyler Smith</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links">
+			<i class="far fa-caret-square-down" data-fa-transform="grow-10"></i>
+		</button>
 		<!-- Navbar Links -->
-		<ul class="nav mr-4">
-			<li class="nav-item">
-				<a class="nav-link" href="./index.html">about</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="./portfolio.html">portfolio<a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="./contact.html">contact</a>
-			</li>
-		</ul>
+		<div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+			<ul class="navbar-nav mr-4">
+				<li class="nav-item pt-2 pt-md-1">
+					<a class="nav-link" href="./index.html">about</a>
+				</li>
+				<li class="nav-item pt-2 pt-md-1">
+					<a class="nav-link" href="./portfolio.html">portfolio</a>
+				</li>
+				<li class="nav-item pt-2 pt-md-1">
+					<a class="nav-link" href="./contact.html">contact</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 	<!-- Navbar Gradient -->
 	<div class="container-fluid" id="navbar-gradient-hack"></div>
 
+	<!-- MAIN CONTENT, Projects -->
     <main>
 		<div class="container">
-			<div class="row mt-4 justify-content-center">
+			<div class="row mt-4 justify-content-center text-center">
 				<div class="display-1">
 					Archived Projects
 				</div>
 			</div>
+			<!-- Two Projects Per Row, so it looks good responsively -->
 			<div class="row">
 				<div class="col">
 					<div class="card border border-secondary">
@@ -75,9 +82,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="col">
-					
-				</div>
 			</div>
 		</div>
     </main>
@@ -93,6 +97,16 @@
 		</div>
 	</footer>
 
-    <script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
+	<script src="./imgCollapser.js"></script>
+	<script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 </body>
 </html>
