fixed footer gap with -1px bottom

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<!-- Right Column Contains 1-2 columns with info -->
 				<!-- NOTE Couldn't figure out how to vertically align these two divs each taking up 50% height -->
 				<div class="col-md-12 col-lg-8">
-					<div class="row bio-row debug">
+					<div class="row bio-row">
 						<div class="col">
 							<div class=bio-header>
 								<p>Full-stack</p>
@@ -78,7 +78,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="row bio-row debug">
+					<div class="row bio-row">
 						<div class="col">
 							<p class="bio-header">Game Designer</p>
 							<p class="bio-desc">
