changed required=true to required in accordance with html validation

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 <form class="text-center">
                     <div class="form-group pt-2">
                         <label for="contact-input-name">Name *</label>
-                        <input type="text" class="form-control" id="contact-input-name" required="true" placeholder="Your Name">
+                        <input type="text" class="form-control" id="contact-input-name" required placeholder="Your Name">
                     </div>
                     <div class="form-group pt-2">
                         <label for="contact-input-email">Email address *</label>
