styling, added navbar and headers

--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
 	<link rel="stylesheet" href="./Assets/Font/Louis George Cafe.ttf">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
+	<script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	
 	<div class="container">
 		<section id="splash">
 			<h1>Tyler Smith</h1>
+			<h2>Web Developer</h2>
 		</section>
+		<nav id="nav-wrapper">
+			<div>
+				<i class="fab fa-github-square fa-4x"></i>
+				<span>Github</span>
+			</div>
+		</nav>
 		<section id="below-fold">
 
 		</section>
