github link and icon in navbar implemented

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<h2>Web Developer</h2>
 		</section>
 		<nav id="nav-wrapper">
-			<div>
-				<i class="fab fa-github-square fa-4x"></i>
-				<span>Github</span>
-			</div>
+			<a class="nav-icon" href="https://www.github.com/sakiskid" target="_blank">
+				<i class="fab fa-github-square fa-fw fa-4x"></i>
+				<span class="nav-label">Github</span>
+			</a>
 		</nav>
 		<section id="below-fold">
 
