starting work on article section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	
-	<div class="container">
+	<main class="container">
 		<section id="splash">
 			<h1>Tyler Smith</h1>
 			<h2>Web Developer</h2>
@@ -22,10 +22,10 @@
 				<span class="nav-label">Github</span>
 			</a>
 		</nav>
-		<section id="below-fold">
-
+		<section id="showcase">
+			<article class="active"></article>
 		</section>
-	</div>
+	</main>
 
 </body>
 </html>
