more styling work, background set to fixed and changed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tyler Smith</title>
 	<link rel="stylesheet" href="./Assets/Font/Louis George Cafe.ttf">
+	<link rel="stylesheet" href="./Assets/Font/LinLibertine_RZ.ttf">
+	<link rel="stylesheet" href="./Assets/Font/LinLibertine_RB.ttf">
+	<link rel="stylesheet" href="./Assets/Font/LinLibertine_R.ttf">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/e999b88b1e.js" crossorigin="anonymous"></script>
