really cool background style. used fixed attachement, and the same background size with different colors to create a really cool effect.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 			<h1>Tyler Smith</h1>
 			<h2>Web Developer</h2>
 		</section>
+
 		<nav id="nav-wrapper">
 			<a class="nav-icon" href="https://www.github.com/sakiskid" target="_blank">
 				<i class="fab fa-github-square fa-fw fa-4x"></i>
 				<span class="nav-label">Github</span>
 			</a>
 		</nav>
-		<section id="showcase">
+		
+		<section id="showcase-wrapper">
 			<article class="active"></article>
 		</section>
 	</main>
