added linkedin to navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<section id="splash">
 			<h1>Tyler Smith</h1>
 			<h2>Web Developer</h2>
+			<!-- <h2>C# Game Developer</h2> -->
 		</section>
 
 		<nav id="nav-wrapper">
@@ -25,9 +26,14 @@
 				<i class="fab fa-github-square fa-fw fa-4x"></i>
 				<span class="nav-label">Github</span>
 			</a>
+			<a class="nav-icon" href="https://www.linkedin.com/in/tyler-smith-atx/" target="_blank">
+				<i class="fab fa-linkedin fa-fw fa-4x"></i>
+				<span class="nav-label">LinkedIn</span>
+			</a>
 		</nav>
-		
+
 		<section id="showcase-wrapper">
+			<h1>Showcase</h1>
 			<article class="active"></article>
 		</section>
 	</main>
