--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
 </head>
 <body>
 	
+	<header id="header-wrapper">
+		<a class="header-icon" href="https://www.github.com/sakiskid" target="_blank">
+			<i class="fab fa-github-square fa-fw fa-4x"></i>
+			<span class="header-label">Github</span>
+		</a>
+		<a class="header-icon" href="https://www.linkedin.com/in/tyler-smith-atx/" target="_blank">
+			<i class="fab fa-linkedin fa-fw fa-4x"></i>
+			<span class="header-label">LinkedIn</span>
+		</a>
+	</header>
+
 	<main class="container">
+		<nav>
+
+		</nav>
+
 		<section id="splash">
 			<h1>Tyler Smith</h1>
 			<h2>Web Developer</h2>
 			<!-- <h2>C# Game Developer</h2> -->
 		</section>
-
-		<nav id="nav-wrapper">
-			<a class="nav-icon" href="https://www.github.com/sakiskid" target="_blank">
-				<i class="fab fa-github-square fa-fw fa-4x"></i>
-				<span class="nav-label">Github</span>
-			</a>
-			<a class="nav-icon" href="https://www.linkedin.com/in/tyler-smith-atx/" target="_blank">
-				<i class="fab fa-linkedin fa-fw fa-4x"></i>
-				<span class="nav-label">LinkedIn</span>
-			</a>
-		</nav>
 
 		<section id="showcase-wrapper">
 			<h1>Showcase</h1>
