--- a/index.html
+++ b/index.html
@@ -25,22 +25,38 @@
 		</a>
 	</header>
 
-	<main class="container">
-		<nav>
+	<div id="container-wrapper">
+		<nav id="container-nav">
+			<div class="navh-1">About Me</div>
+			<div class="navh-2">Test</div>
+			<div class="navh-2">Test</div>
+			<div class="navh-2">Test</div>
+			<div class="navh-2">Test</div>
+
+			<div class="navh-1">Portfolio</div>
+			<div class="navh-2">Weather Dashboard</div>
+			<div class="navh-2">Unity C# Backflip Master</div>
+			<div class="navh-2">Unity C# PBAB</div>
+
+			<div class="navh-1">My Other Work</div>
+
+			<div class="navh-1">Contact</div>
 
 		</nav>
 
-		<section id="splash">
-			<h1>Tyler Smith</h1>
-			<h2>Web Developer</h2>
-			<!-- <h2>C# Game Developer</h2> -->
-		</section>
-
-		<section id="showcase-wrapper">
-			<h1>Showcase</h1>
-			<article class="active"></article>
-		</section>
-	</main>
+		<main id="container-content">
+			<section id="splash">
+				<h1>Tyler Smith</h1>
+				<h2>Web Developer</h2>
+				<!-- <h2>C# Game Developer</h2> -->
+			</section>
+			
+			<section id="showcase-wrapper">
+				<h1>Showcase</h1>
+				<article class="active"></article>
+			</section>
+		</main>
+	</div>
 
 </body>
 </html>
